--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,45 +1,13 @@
-
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Myfamilysinfo" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Myfamilysinfo" %>">
-    <%= render 'layouts/tag' %>
+    <title></title>
     <%= stylesheet_link_tag "application", media: "all" %>
-    <%# Modernizr is required for Zurb Foundation %>
-    <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-
   </head>
   <body>
-    <header>
-      <%= render 'layouts/navigation' %>
-    </header>
-       <%= render 'layouts/messages' %>
-       <%= render 'layouts/facebooklikes' %>
-       <%= yield %>
-      <footer class="row">
-        <div class="large-12 columns">
-            <div class="row">
-
-              <div class="large-6 columns">
-                  <div class="fb-like" data-href="https://www.facebook.com/myfamilysinfo" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-                  <p>&copy; Copyright no one at all. Go to town.</p>
-              </div>
-
-              </div>
-
-            </div>
-        </div>
-      </footer>
-
-    <!-- End Footer -->
-
-    </div>
-  </div>
-
+    <%= yield %>
   </body>
 </html>
