create angular app and empty controllers

--- a/app/assets/javascripts/angular_app.js.erb
+++ b/app/assets/javascripts/angular_app.js.erb
@@ -1,2 +1,11 @@
 /= require_self
 /= require_tree ./angular_app
+
+(function() {
+  var app = angular.module('crummy', [ 'KidListController', 'KidDetailController', 'KidEventController' ]);
+
+  app.config(['$httpProvider', function($httpProvider){
+    $httpProvider.defaults.headers.common['X-CSRF-Token'] = $('meta[name=csrf-token]').attr('content');
+  }]);
+
+});
