fix sprockets lines

--- a/app/assets/javascripts/angular_app.js.erb
+++ b/app/assets/javascripts/angular_app.js.erb
@@ -1,5 +1,5 @@
-/= require_self
-/= require_tree ./angular_app
+//= require_self
+//= require_tree ./angular_app
 
 (function() {
   var app = angular.module('crummy', [ 'KidListController', 'KidDetailController', 'KidEventController' ]);
@@ -7,5 +7,4 @@
   app.config(['$httpProvider', function($httpProvider){
     $httpProvider.defaults.headers.common['X-CSRF-Token'] = $('meta[name=csrf-token]').attr('content');
   }]);
-
-});
+})();
