fix errors and modularize controllers

--- a/app/assets/javascripts/angular_app/controllers/kiddetailcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kiddetailcontroller.js.erb
@@ -1,3 +1,7 @@
-app.controller('KidDetailController', [ '$scope', function($scope){
+(function(){
+  var app = angular.module('kid-details', []);
 
-}]);
+  app.controller('KidDetailController', [ '$http', '$scope', function($http, $scope){
+
+  }]);
+})();
