--- a/app/views/angular/app.html.erb
+++ b/app/views/angular/app.html.erb
@@ -1,5 +1,5 @@
 <div ng-app='crummy'>
-  <div ng-controller='SessionsController as session' ng-hide='current_user'>
+  <div ng-hide='current_user'>
     <!-- Login/signup form will go here -->
   </div>
   <div ng-show='current_user'>
