--- a/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
@@ -1,7 +1,7 @@
 (function() {
   var app = angular.module('kid-events', []);
 
-  app.controller('KidEventController', [ '$scope', function($scope){
+  app.controller('KidEventController', function(){
 
-  }]);
+  });
 })();
