--- a/app/views/angular/app.html.erb
+++ b/app/views/angular/app.html.erb
@@ -6,11 +6,19 @@
     <div class='container'>
       <div class='row'>
         <div class='col-sm-4'>
-          <ul id='kidlist' class='list-group'>
-            <li ng-repeat='kid in kidlist.kids' class='list-group-item' id='kidlist-kid-{{kid.id}}'>
+          <div id='kidlist' class='list-group'>
+            <div class='list-group-item'><h4>Kids</h4></div>
+            <a ng-repeat='kid in kidlist.kids' class='list-group-item' ng-class='{ active: kidlist.current_kid == kid }' ng-click='kidlist.current_kid = kid'>
               {{kid.name}}
-            </li>
-          </ul>
+            </a>
+            <div class='list-group-item' ng-hide='kidlist.show_form'>
+              <button class='btn btn-default' ng-click='kidlist.show_form = true'>Add Kid</button>
+            </div>
+            <form class='list-group-item form-inline' ng-submit='kidlist.create()' ng-show='kidlist.show_form'>
+                <input class='form-control' ng-model='kidlist.new_kid.name'></input>
+                <button type='submit' class='btn btn-default'>Save</button>
+            </form>
+          </div>
         </div>
         <div class='col-sm-8'>
           <div class='container'>
