Test Angular Page, Add Login Form

--- a/app/assets/javascripts/angular_app.js.erb
+++ b/app/assets/javascripts/angular_app.js.erb
@@ -2,10 +2,14 @@
 /= require_tree ./angular_app
 
 (function() {
-  var app = angular.module('crummy', [ 'KidListController', 'KidDetailController', 'KidEventController' ]);
+  var app = angular.module('crummy', [ 'KidListController', 'KidDetailController', 'KidEventController', '' ]);
 
   app.config(['$httpProvider', function($httpProvider){
     $httpProvider.defaults.headers.common['X-CSRF-Token'] = $('meta[name=csrf-token]').attr('content');
   }]);
+
+app.controller('LoginCtrl', [ '$scope', function($scope){
+    $scope.test = 'Hello world!';
+}]);
 
 });
