--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body ng-app="crummy" ng-controller="LoginCtrl">
     <%= yield %>
   </body>
 </html>
