--- a/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
@@ -1,3 +1,77 @@
-app.controller('KidEventController', [ '$scope', function($scope){
+(function() {
+  var app = angular.module('kid-events', []);
 
-}]);
+  app.controller('KidEventController', [ '$scope', function($scope){
+    $scope.events = [];
+    $scope.event  = {};
+
+    $scope.index = function() {
+      $http.get('/api/kids/' + $scope.kidlist.current_kid.id + '/events')
+        .success(function(data) {
+          $scope.events = data;
+        })
+        .error(function(data, status) {
+          console.log(status);
+          $scope.errors.push(status);
+        });
+    };
+
+    $scope.create = function() {
+      $http.post('/api/kids/' + $scope.kidlist.current_kid.id + '/events', $scope.event)
+        .success(function(data) {
+          $scope.events.push(data);
+          $scope.event = {};
+        })
+        .error(functuon(data, status) {
+          console.log(status);
+          $scope.errors.push(status)
+        })
+    };
+
+    $scope.edit = function(event) {
+      $http.patch('/api/kids/' + $scope.kidlist.current_kid.id + '/events/' + event.id, event)
+        .success(function(data) {
+        })
+        .error(function(data) {
+          console.log(error);
+          $scope.errors.push(status);
+        });
+    };
+
+    $scope.delete = function(product) {
+      $http.delete('/api/kids' + $scope.kidlist.current_kid.id + '/events/' + event.id)
+        .success(function(data) {
+          if(confirm('Are you sure you want to delete this event?')) {
+            var index = $scope.events.map(function(e) { return e.id; }).indexOf(event.id);
+            $scope.events.splice(index, 1);
+          };
+        })
+        .error(function(data, status) {
+          console.log(status);
+          $scope.errors.push(status);
+        })
+    }
+
+  }]);
+
+  app.controller('DropdownCtrl', function ($scope) {
+
+    $scope.toggleDropdown = function($event) {
+      $event.preventDefault();
+      $event.stopPropagation();
+      $scope.status.isopen = !$scope.status.isopen;
+    };
+
+  });
+
+  app.controller('DatepickerDemoCtrl', function ($scope) {
+
+    $scope.open = function($event) {
+      $event.preventDefault();
+      $event.stopPropagation();
+
+      $scope.opened = true;
+    };
+
+  });
+})();
