create setkid function to trigger event load

--- a/app/assets/javascripts/angular_app/controllers/kidlistcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kidlistcontroller.js.erb
@@ -29,5 +29,10 @@
           kidlist.show_form = false;
         });
     };
+
+    kidlist.setKid = function(kid){
+      kidlist.current_kid = kid;
+      $scope.getevents();
+    };
   }]);
 })();
