Add Login Controller- Devise issue alert

--- a/app/assets/javascripts/angular_app.js.erb
+++ b/app/assets/javascripts/angular_app.js.erb
@@ -2,7 +2,7 @@
 //= require_tree ./angular_app
 
 (function() {
-  var app = angular.module('crummy', [ 'kid-list', 'kid-details', 'kid-events' ]);
+  var app = angular.module('crummy', [ 'kid-list', 'kid-details', 'kid-events', 'login-user' ]);
 
 
   app.config(['$httpProvider', function($httpProvider){
