--- a/app/views/angular/app.html.erb
+++ b/app/views/angular/app.html.erb
@@ -1,16 +1,6 @@
 <div ng-app='crummy'>
-  <div ng-hide='current_user'>
-    <!-- Login/signup form will go here -->
-    <form name="loginForm" ng-controller="LoginController as loginCtrl" ng-submit ="loginCtrl.login(credentials)" novalidate>
-      <label for="email">Email:</label>
-      <input type="text" id="email" ng-model="credentials.email">
-      <label for="password">Password:</label>
-      <input type="text" id="password", ng-model="credentials.password">
-      {{$rootScope.current_user.authentication_token}}
-      <button type="submit">Login</button>
-  </form>
-  </div>
-  <div ng-controller='KidListController as kidlist' ng-init='getKidList()'>
+  <login-form ng-hide="current_user"></login-form>
+  <div ng-controller='KidListController as kidlist' ng-show="current_user">
     <div class='container'>
       <div class='row'>
         <div class='col-sm-4'>
