--- a/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kideventcontroller.js.erb
@@ -5,11 +5,8 @@
     $scope.events = [];
     $scope.event  = {};
 
-    // TODO: for testing purposes only
-    $scope.auth_token = 'R_x23UQx-tW2BtCNwcxm';
-
     $scope.index = function() {
-      $http.get('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $scope.auth_token)
+      $http.get('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $rootScope.current_user.authentication_token)
         .success(function(data) {
           $scope.events = data;
         });
@@ -19,7 +16,7 @@
 
     $scope.create = function(form) {
       console.log($scope.event);
-      $http.post('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $scope.auth_token, $scope.event)
+      $http.post('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $rootScope.current_user.authentication_token, $scope.event)
         .success(function(data) {
           form.setForm(0);
           $scope.events.push(data);
@@ -28,7 +25,7 @@
     };
 
     $scope.duplicate = function(event) {
-      $http.post('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $scope.auth_token, event)
+      $http.post('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events?auth_token=' + $rootScope.current_user.authentication_token, event)
         .success(function(data) {
           $scope.events.push(data);
           data.datetime = new Date();
@@ -36,14 +33,14 @@
     }
 
     $scope.edit = function(event) {
-      $http.patch('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events/' + event.id + '?auth_token=' + $scope.auth_token, event)
+      $http.patch('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events/' + event.id + '?auth_token=' + $rootScope.current_user.authentication_token, event)
         .success(function(data) {
         });
     };
 
     $scope.delete = function(event) {
       console.log(event);
-      $http.delete('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events/' + event.id + '?auth_token=' + $scope.auth_token)
+      $http.delete('/api/v1/kids/' + $scope.kidlist.current_kid.id + '/events/' + event.id + '?auth_token=' + $rootScope.current_user.authentication_token)
         .success(function(data) {
           if(confirm('Are you sure you want to delete this event?')) {
             var index = $scope.events.map(function(e) { return e.id; }).indexOf(event.id);
