--- a/app/assets/javascripts/angular_app/templates/login-form.html
+++ b/app/assets/javascripts/angular_app/templates/login-form.html
@@ -1,8 +1,17 @@
-  <form name = "loginForm" ng-controller="LoginController as loginCtrl"
-                ng-submit ="loginForm.$valid && loginCtrl.login(credentials)" novalidate>
-    <label for="email">Email:</label>
-    <input type="text" id="email" ng-model="credentials.email">
-    <label for="password">Password:</label>
-    <input type="text" id="password", ng-model="credentials.password">
-    <button type="submit">Login</button>
-  </form>
+<div>
+  <div class="container"><div class="row"><div class="col-md-6 col-md-offset-3">
+    <div class="panel">
+      <form name="loginForm" ng-controller="LoginController as loginCtrl" ng-submit ="loginCtrl.login()">
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input class="form-control" type="text" id="email" ng-model="loginCtrl.credentials.email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input class="form-control" type="text" id="password" ng-model="loginCtrl.credentials.password">
+        </div>
+        <button type="submit" class="btn btn-default">Login</button>
+      </form>
+    </div>
+  </div></div></div>
+</div>
