--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
-  <body class="them-invert" ng-app="crummy" ng-controller="LoginCtrl">
+  <body class="theme-invert" ng-app="crummy" ng-controller="LoginCtrl">
 
     <%= yield %>
   </body>
