Remove Login/Signup Button to Access App

--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -14,9 +14,7 @@
 				</h3>
 
 				<p>Site description?</p>
-				<button><%= link_to 'Login', app_path %></button>
-				<button>Sign Up</button>
-
+				<button><%= link_to 'Access App', app_path %></button>
 			</div>
 		</div>
 
