--- a/app/assets/javascripts/angular_app/templates/login-form.html
+++ b/app/assets/javascripts/angular_app/templates/login-form.html
@@ -5,14 +5,14 @@
       <form style="padding: 30px;" name="loginForm" ng-controller="LoginController as loginCtrl">
         <div class="form-group">
           <label for="email">Email:</label>
-          <input class="form-control" type="text" id="email" ng-model="loginCtrl.credentials.email">
+          <input class="form-control" type="text" id="email" ng-required="true" ng-model="loginCtrl.credentials.email">
         </div>
         <div class="form-group">
           <label for="password">Password:</label>
-          <input class="form-control" type="password" id="password" ng-model="loginCtrl.credentials.password">
+          <input class="form-control" type="password" id="password" ng-required="true" ng-model="loginCtrl.credentials.password">
         </div>
-        <button class="btn btn-default" ng-click="loginCtrl.login()">Login (existing user)</button>
-        <button class="btn btn-default pull-right" ng-click="loginCtrl.signup()">Create (new user)</button>
+        <button class="btn btn-default" ng-click="loginForm.$valid && loginCtrl.login()">Login (existing user)</button>
+        <button class="btn btn-default pull-right" ng-click="loginForm.$valid && loginCtrl.signup()">Create (new user)</button>
         <div class="error" ng-show="loginCtrl.errors.length">
           <div ng-repeat="error in loginCtrl.errors">{{error}}</div>
         </div>
