Alter Text Color on Home Page

--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -12,7 +12,7 @@
 
 				</strong>
 				</h3>
-			<button type="button" data-toggle="modal" data-target="#myModal">
+			<button type="button" class="modalButton" data-toggle="modal" data-target="#myModal">
       Learn More
       </button>
 
