--- a/app/assets/javascripts/angular_app/templates/events/event-new-heightweight.html
+++ b/app/assets/javascripts/angular_app/templates/events/event-new-heightweight.html
@@ -1,4 +1,4 @@
-<form name="newEvent" ng-submit="create(form)"><h2>New Event</h2><br>
+<form name="newEvent" ng-submit="create(form, 'HeightWeight')"><h2>New Event</h2><br>
   <label for="datetime">Date:<br>
     <p class="input-group" ng-controller="DatepickerCtrl">
       <input type="text" class="form-control" datepicker-popup="MM/dd/yyyy" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" name="datetime" ng-model="event.datetime" />
@@ -11,11 +11,11 @@
     </div>
   </label><br>
   <label for="height">Height:<br>
-    <input type="text" name="height" ng-model="event.height">
+    <input type="text" name="height" ng-model="event.height" ng-required="true">
   </label><br>
   <label for="weight">Weight:<br>
-    <input type="text" name="weight" ng-model="event.weight">
+    <input type="text" name="weight" ng-model="event.weight" ng-required="true">
   </label><br>
-  <input type="hidden" name="type" value="HeightWeight" ng-model="event.type">
-  <input type="submit" value="Submit" ng-disabled="newProduct.$invalid"/>
+  <input type="submit" value="Submit"/>
+  <a ng-click="form.setForm(0); clearformdata()">Back</a>
 </form>
