--- a/app/assets/javascripts/angular_app/controllers/kidlistcontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/kidlistcontroller.js.erb
@@ -30,6 +30,7 @@
     kidlist.setKid = function(kid){
       kidlist.current_kid = kid;
       $rootScope.getevents();
+      $rootScope.getKidDetails();
     };
   }]);
 })();
