Add Nav SignOut and logout function in usercontroller

--- a/app/assets/javascripts/angular_app/controllers/logincontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/logincontroller.js.erb
@@ -19,6 +19,13 @@
         });
     };
 
+    login.logout = function(){
+      console.log("Here");
+      localStorage.removeItem('user');
+      $rootScope.current_user = null;
+      window.location.href = 'app';
+    };
+
     login.signup = function(){
       login.errors = [];
 
