--- a/app/assets/javascripts/angular_app/templates/login-form.html
+++ b/app/assets/javascripts/angular_app/templates/login-form.html
@@ -2,7 +2,7 @@
   <div class="container"><div class="row"><div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default">
       <div class="panel-heading"><h4>Login or Signup</h4></div>
-      <form style="padding: 30px;" name="loginForm" ng-controller="LoginController as loginCtrl">
+      <form style="padding: 30px;" name="loginForm">
         <div class="form-group">
           <label for="email">Email:</label>
           <input class="form-control" type="text" id="email" ng-required="true" ng-model="loginCtrl.credentials.email">
