Add Title to NavBar, Move SignOut to Right

--- a/app/assets/javascripts/angular_app/controllers/logincontroller.js.erb
+++ b/app/assets/javascripts/angular_app/controllers/logincontroller.js.erb
@@ -23,7 +23,7 @@
       console.log("Here");
       localStorage.removeItem('user');
       $rootScope.current_user = null;
-      window.location.href = 'app'    ;
+      window.location.href = '/'    ;
     };
 
     login.signup = function(){
